[package]
name = "microservice"
version = "0.1.0"
authors = ["Brandon Richardson <brandon.richardson4328@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["microservice", "tokio", "capnp", "capnproto", "rpc"]
repository = "https://github.com/despicableGruu/microservice-rs"
homepage = "https://github.com/despicableGruu/microservice-rs"
documentation = "https://docs.rs/microservice-rs"
description = "A microservice template using Cap'n Proto"
categories = ["network-programming"]

[badges]
travis-ci = { repository = "despicableGruu/microservice-rs", branch = "master" }
appveyor = { repository = "despicableGruu/microservice-rs", branch = "master", service = "github" }

[build-dependencies]
capnpc = "0.8"

[dependencies]
capnp = "0.8"
capnp-rpc = "0.8"
clap = { version = "2", features = ["yaml"] }
clippy = {version = "0", optional = true}
error-chain = "0"
futures = "0.1"
log = "0.3"
mowl = "1"
native-tls = "0.1"
openssl = "0.9"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.1"

[features]
default = []
